<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<groupId>com.tjtechy</groupId>
		<artifactId>ECommerceMicroservices</artifactId>
		<version>0.0.1</version>
		<relativePath>../pom.xml</relativePath>
	</parent>

	<artifactId>order-service</artifactId>
	<name>order-service</name>
	<description>Order Service Module for ECommerce Microservices</description>
	<url/>
	<licenses>
		<license/>
	</licenses>
	<developers>
		<developer/>
	</developers>
	<scm>
		<connection/>
		<developerConnection/>
		<tag/>
		<url/>
	</scm>
	<properties>
		<java.version>25</java.version>
<!--		<spring-cloud.version>2024.0.0</spring-cloud.version>-->
		<spring-kafka.version>4.1.0</spring-kafka.version>
		<springdoc.version>3.0.3</springdoc.version>
<!--		<kafka-clients.version>3.5.0</kafka-clients.version>-->
		<testcontainers.version>2.0.5</testcontainers.version>
	</properties>

	<dependencies>

		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-data-jpa</artifactId>
		</dependency>

		<!--Spring Boot Starter Web, it is blocking MVC-->
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-web</artifactId>
		</dependency>
		<!--Spring boot Starter WebFlux (For WebClient)-->
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-webflux</artifactId>
		</dependency>

		<!-- Eureka Client -->
		<dependency>
			<groupId>org.springframework.cloud</groupId>
			<artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
		</dependency>


		<dependency>
			<groupId>org.postgresql</groupId>
			<artifactId>postgresql</artifactId>
			<scope>runtime</scope>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-test</artifactId>
			<scope>test</scope>
		</dependency>

		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-webmvc-test</artifactId>
			<scope>test</scope>
		</dependency>
		<!-- Autoconfigure test database -->
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-jdbc-test</artifactId>
			<scope>test</scope>
		</dependency>


		<dependency>
			<groupId>com.tjtechy</groupId>
			<artifactId>system</artifactId>
			<version>0.0.1</version>
		</dependency>

		<dependency>
			<groupId>com.tjtechy</groupId>
			<artifactId>exception</artifactId>
			<version>0.0.1</version>
		</dependency>
		<!-- Add common-utils Dependency -->
		<dependency>
			<groupId>com.tjtechy</groupId>
			<artifactId>common-utils</artifactId>
			<version>0.0.1</version>
		</dependency>

		<!--dev tools-->
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-devtools</artifactId>
			<scope>runtime</scope>
			<optional>true</optional>
		</dependency>

		<dependency>
			<groupId>com.fasterxml.jackson.datatype</groupId>
			<artifactId>jackson-datatype-jsr310</artifactId>
<!--			<version>2.18.2</version>-->
		</dependency>

<!--        <dependency>-->
<!--            <groupId>jakarta.validation</groupId>-->
<!--            <artifactId>jakarta.validation-api</artifactId>-->
<!--        </dependency>-->

		<!-- Jackson module to support Hibernate types and lazy loading
		 It prevents infinite recursion or unexpected JSON.E.G.,When you have
		 when you have another entity inside another entity related by, for
		 example @OneToMany-->
		<!--		<dependency>-->
		<!--			<groupId>com.fasterxml.jackson.datatype</groupId>-->
		<!--			<artifactId>jackson-datatype-hibernate6</artifactId>-->
		<!--			<version>2.18.2</version> &lt;!&ndash; Use the latest version &ndash;&gt;-->
		<!--		</dependency>-->

        <!--Add spring cloud config client dependency so application can use the
        config server config file-->
		<dependency>
			<groupId>org.springframework.cloud</groupId>
			<artifactId>spring-cloud-starter-config</artifactId>
		</dependency>

		<!--Creates an early application context (before the main Spring context loads)
		to fetch external configuration (e.g., from Spring Cloud Config Server)
		before beans are initialized.-->
		<dependency>
			<groupId>org.springframework.cloud</groupId>
			<artifactId>spring-cloud-starter-bootstrap</artifactId>
		</dependency>

		<!-- Add Apache Kafka dependency -->
		<dependency>
			<groupId>org.springframework.kafka</groupId>
			<artifactId>spring-kafka</artifactId>
		</dependency>

		<!-- Test dependencies -->
		<dependency>
			<groupId>io.projectreactor</groupId>
			<artifactId>reactor-test</artifactId>
			<scope>test</scope>
		</dependency>

		<!-- PostgreSQL Test Container -->
		<dependency>
			<groupId>org.testcontainers</groupId>
			<artifactId>testcontainers-postgresql</artifactId>
<!--			<version>2.0.5</version>-->
			<scope>test</scope>
		</dependency>

		<dependency>
			<groupId>org.testcontainers</groupId>
			<artifactId>testcontainers-kafka</artifactId>
<!--			<version>2.0.5</version>-->
			<scope>test</scope>
		</dependency>

		<dependency>
			<groupId>org.springframework.kafka</groupId>
			<artifactId>spring-kafka-test</artifactId>
			<scope>test</scope>
		</dependency>

		<!--JUnit-->
		<dependency>
			<groupId>org.testcontainers</groupId>
			<artifactId>testcontainers-junit-jupiter</artifactId>
<!--			<version>2.0.5</version>-->
			<scope>test</scope>
		</dependency>

		<dependency>
			<groupId>com.redis</groupId>
			<artifactId>testcontainers-redis</artifactId>
			<version>2.2.2</version>
		</dependency>

		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-test</artifactId>
			<scope>test</scope>
		</dependency>

		<!-- Optional: For using JSON serialization in Redis,
			 You don't need this if we are not serializing in redis
			 -->
		<dependency>
			<groupId>com.fasterxml.jackson.core</groupId>
			<artifactId>jackson-databind</artifactId>
<!--			<version>2.18.2</version>-->
		</dependency>

		<!-- Add dependencies for caching -->
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-cache</artifactId>
		</dependency>

		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-data-redis</artifactId>
		</dependency>

		<dependency>
			<groupId>org.springframework.cloud</groupId>
			<artifactId>spring-cloud-starter-contract-stub-runner</artifactId>
			<scope>test</scope>
		</dependency>

		<!-- api documentation HTML FORMAT AND JSON FORMAT-->
		<dependency>
			<groupId>org.springdoc</groupId>
			<artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
			<version>${springdoc.version}</version>
		</dependency>

		<dependency>
			<groupId>org.springdoc</groupId>
			<artifactId>springdoc-openapi-starter-webmvc-api</artifactId>
			<version>${springdoc.version}</version>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-webtestclient</artifactId>
			<scope>test</scope>
		</dependency>

	</dependencies>

	<build>
		<plugins>
			<plugin>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-maven-plugin</artifactId>
			</plugin>
		</plugins>
	</build>

</project>
